# nyaai-ai

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/ai/: chunking.py  embeddings.py  llm.py  prompts.py  rag.py  retrieval.py  worker.py
src/nyaai_ai.egg-info/: PKG-INFO  SOURCES.txt
